<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ping1d</name>
  <version>0.0.0</version>
  <description>Reading Distances from  BlueRobotics Ping1D Echosounder</description>
  <maintainer email="daniel.duecker@tum.de">pi</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>sensor_msgs</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>brping</exec_depend>
  <exec_depend>std_msgs</exec_depend>
brping
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
